--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
+  curved_navigation_bar: ^0.3.2
+
 
 dev_dependencies:
   flutter_test:
