--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,10 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
-  curved_navigation_bar: ^0.3.2
   charts_flutter: ^0.9.0
+  curved_navigation_bar: ^0.3.2
+  socket_io_client: ^0.9.10
+
 
 
 dev_dependencies:
